# edot-cloudforwarder-onboarding-scripts

./: .gitignore  CODE_STYLE.md  CONTRIBUTING.md  DEVELOPING.md  Makefile  README.md  discover.py  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/edot_discovery/: __init__.py  cli.py  onboarding example
src/edot_discovery/discovery/: __init__.py  cloudtrail.py  coordinator.py  elb_logs.py  flow_logs.py  forwarders.py  types.py  utils.py  waf_logs.py
src/edot_discovery/discovery/services/: __init__.py  cloudtrail.py  elb_logs.py  flow_logs.py  waf_logs.py
src/edot_discovery/discovery/stacks/: __init__.py  commands.py  forwarders.py
src/edot_discovery/discovery/utils/: __init__.py  bucket.py  cloudformation.py  console.py  regions.py  validation.py
tests/: __init__.py  conftest.py  test_cli.py
tests/discovery/stacks/: test_commands.py
tests/discovery/utils/: test_bucket.py  test_cloudformation.py  test_validation.py
